green.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: greenpod
  name: greenpod-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: greenpod
  type: NodePort

---
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: greenpod
  name: greenpod
spec:
  volumes:
  - name: webpage
    configMap:
      name: webconfigs
      items:
      - key: green.html
        path: index.html
  containers:
  - image: nginx
    name: greencontainer
    ports:
    - containerPort: 80
    volumeMounts:
    - name: webpage
      mountPath: /usr/share/nginx/html
